# learngit

./: main.js  test.cpp  test.js
addLibrary/: CMakeLists.txt
addLibrary/lib/: CMakeLists.txt  hello.c
clang-test/: CMakeLists.txt  main.cc
clangAVX-test/: CMakeLists.txt  a.out  test.c
clanglib-test/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  hello-world  linux.toolchain.cmake  main.c
fmt-test/: CMakeLists.txt
helloworld/: CMakeLists.txt  hello.cpp
llvm-test/: test.bc  test.c
openalsample/openaltut/: alsound.cpp  alsound.h  dinput.cpp  main.cpp  openaltest.dsp  openaltest.dsw
shell-test/: test.sh
v8-demo-master/: CMakeLists.txt
xlibTest/: output  x11.c
